[gd_scene load_steps=11 format=3 uid="uid://csgwjjqrwqoy0"]

[ext_resource type="Script" uid="uid://bemitvvcd87oa" path="res://scripts/shop.gd" id="1_rgcs7"]
[ext_resource type="Script" uid="uid://b5ufi8mmpoals" path="res://scripts/champion_data.gd" id="2_skkvx"]
[ext_resource type="Resource" uid="uid://digdr3ve32udb" path="res://data/fighter.tres" id="3_eo1la"]
[ext_resource type="Resource" uid="uid://dw3pusjlrs7dh" path="res://data/wizard.tres" id="4_toxd1"]
[ext_resource type="Resource" uid="uid://cxek03a6nagnq" path="res://data/bandit.tres" id="5_47hci"]
[ext_resource type="Resource" uid="uid://d0em6jn425c6h" path="res://data/shieldbearer.tres" id="6_hd80v"]
[ext_resource type="Resource" uid="uid://cxwf21vdhp7ov" path="res://data/priest.tres" id="7_abjrc"]
[ext_resource type="Resource" uid="uid://c1lx0ys505qs4" path="res://data/archer.tres" id="8_jccym"]
[ext_resource type="PackedScene" uid="uid://crrcw65irwauy" path="res://scenes/ShopSlot.tscn" id="9_plhqw"]
[ext_resource type="PackedScene" uid="uid://dhtudq5lcjm0n" path="res://ui/potrait_button.tscn" id="10_eo1la"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_rgcs7")
available_units = Array[ExtResource("2_skkvx")]([ExtResource("3_eo1la"), ExtResource("4_toxd1"), ExtResource("5_47hci"), ExtResource("6_hd80v"), ExtResource("7_abjrc"), ExtResource("8_jccym")])
shop_slot_scene = ExtResource("9_plhqw")
slots_per_roll = 3
owned_portrait_scene = ExtResource("10_eo1la")

[node name="GoldLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 468.0
offset_top = 272.0
offset_right = 551.0
offset_bottom = 310.0

[node name="RoundLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 297.0
offset_top = 244.0
offset_right = 379.0
offset_bottom = 285.0

[node name="SlotsContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 21.0
offset_top = 4.0
offset_right = 1056.0
offset_bottom = 505.0

[node name="RerollButton" type="Button" parent="."]
layout_mode = 0
offset_left = 626.0
offset_top = 342.0
offset_right = 695.0
offset_bottom = 409.0
text = "Reroll"

[node name="StartBattleButton" type="Button" parent="."]
layout_mode = 0
offset_left = 283.0
offset_top = 354.0
offset_right = 411.0
offset_bottom = 390.0
text = "Start Battle"

[node name="OwnedContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 257.0
offset_right = 348.0
offset_bottom = 332.0

[connection signal="pressed" from="StartBattleButton" to="." method="_on_start_battle_button_pressed"]
